<resources>
    <string name="app_name">PICKLE</string>
    <string name="action_accept">Accept</string>
    <string name="action_deny">Deny</string>
    <string name="title_location_disclosures">Location Permission</string>
    <string name="msg_explanation_location_permission">PICKLE에서 내 기기 위치에 엑세스하도록 허용하시겠습니까?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="store">store</string>
    <string name="cloth">cloth</string>
    <string name="price">price</string>
    <string name="home_user_recommend">%1$s님을 위한 추천 아우터</string>
    <string name="profile_user_detail">%1$s님, 안녕하세요!</string>
    <string name="price_won">%1$s원</string>

    <string-array name="spinner_color">
        <item>선택하세요</item>
        <item>흰색</item>
        <item>검정</item>
    </string-array>

    <string-array name="spinner_size">
        <item>선택하세요</item>
        <item>S</item>
        <item>M</item>
        <item>L</item>
    </string-array>
</resources>