<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:background="@color/white"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">
        <ImageView
            android:id="@+id/image"
            android:layout_width="96dp"
            android:layout_gravity="center"
            android:layout_height="96dp"
            android:src="@drawable/ic_baseline_location"/>
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/title_location_disclosures" />

        <TextView
            android:id="@+id/tvContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            tools:text="@string/msg_explanation_location_permission" />

        <LinearLayout
            android:id="@+id/containerActionUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="8dp"
            android:orientation="horizontal"
            android:visibility="visible">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnNeg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:background="@drawable/bg_button_radius_8_sliver"
                android:textAllCaps="false"
                android:text="@string/action_deny" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnPos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:background="@drawable/bg_button_radius_8_blue_sapphire"
                android:text="@string/action_accept" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
