<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardviewframe"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_margin="10dp"
        android:clickable="true"
        app:cardCornerRadius="15dp"
        app:cardElevation="7dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="10dp">


        <ImageView
            android:id="@+id/cloth_img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/one" />


    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/store"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/store"
        android:textColor="@color/black"
        android:textSize="25dp"
        app:layout_constraintStart_toStartOf="@+id/cardviewframe"
        app:layout_constraintTop_toBottomOf="@+id/cardviewframe" />

    <TextView
        android:id="@+id/cloth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cloth"
        android:textColor="@color/black"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="@+id/cardviewframe"
        app:layout_constraintTop_toBottomOf="@+id/store" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textColor="@color/black"
        android:textSize="5dp"
        app:layout_constraintStart_toStartOf="@+id/cardviewframe"
        app:layout_constraintTop_toBottomOf="@+id/cloth" />


</androidx.constraintlayout.widget.ConstraintLayout>